--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "peer": "^1.0.0",
     "socket.io": "^4.6.1"
   }
