--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "firebase-admin": "^11.9.0",
         "http": "^0.0.1-security",
         "nodemon": "^2.0.22",
         "peer": "^1.0.0",
